# EchoScroll

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  PROFILE_README.md  QUICKSTART.md  README.md  SECURITY.md  SETUP.md  SPONSORS.md  docker-compose.yml  hardhat.config.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-commit.yml  ci.yml  language-stats.yml
app/: globals.css  layout.tsx  page.tsx  providers.tsx
components/: CreateScroll.tsx  ScrollCard.tsx  ScrollFeed.tsx
contracts/: EchoScroll.sol
docs/: API.md  ARCHITECTURE.md  AWESOME.md  DEPLOYMENT_GUIDE.md  FAQ.md  MAGIC_GUIDE.md  RESOURCES.md  TESTING.md
examples/: README.md
examples/arnoldc/: .editorconfig  .gitignore  README.md  blockchain_counter.arnoldc  config.json  smart_contract.arnoldc
examples/assemblyscript/: .editorconfig  .gitignore  config.json
examples/bash-scripts/: .editorconfig  .gitignore  README.md  config.json  deploy-contract.sh  gas-reporter.sh  setup-node.sh
examples/befunge/: .editorconfig  .gitignore  README.md  blockchain_hash.bf93  config.json  counter.bf93
examples/brainfuck/: .editorconfig  .gitignore  README.md  config.json  hello_world.bf
examples/c/: .editorconfig  .gitignore  config.json
examples/cairo/: .editorconfig  .gitignore  config.json
examples/chef/: .editorconfig  .gitignore  README.md  blockchain_counter.chef  config.json  fibonacci.chef  hello_world.chef
examples/clarity/: .editorconfig  .gitignore  README.md  config.json  counter.clar
examples/clojure/: .editorconfig  .gitignore  config.json
examples/cpp/: .editorconfig  .gitignore  config.json
examples/cpp/crypto-algorithms/: CMakeLists.txt  README.md  keccak256.cpp  keccak256.h
examples/crystal/: .editorconfig  .gitignore  config.json
examples/dart/: .editorconfig  .gitignore  config.json
examples/elixir/: .editorconfig  .gitignore  config.json
examples/erlang/: .editorconfig  .gitignore  config.json
examples/fsharp/: .editorconfig  .gitignore  config.json
examples/func/: .editorconfig  .gitignore  config.json
examples/go/: .editorconfig  .gitignore  config.json  example_test.go
examples/haskell-plutus/: .editorconfig  .gitignore  config.json
examples/rust/near/: Cargo.toml  README.md  lib.rs
examples/rust/solana-anchor/: Anchor.toml  Cargo.toml  README.md  lib.rs
examples/rust/substrate/: Cargo.toml  README.md  lib.rs
lib/: contract.ts  ipfs.ts
scripts/: count_languages.sh  deploy.ts  generate_activity.py
types/: index.ts
utils/: helpers.ts  wagmi.ts
(+201 files in other folders)
