[package]
name = "near-guestbook"
version = "0.1.0"
authors = ["Web3 Multi-Language Showcase"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.1.1"

[dev-dependencies]
near-sdk = { version = "4.1.1", features = ["unit-testing"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[profile.dev]
panic = "abort"
