[package]
name = "simple-counter"
version = "0.1.0"
description = "A simple counter program for Solana using Anchor framework"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "simple_counter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"

[dev-dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
